install-opc413/app/ocp4/SHBFC-UAT/allow-from-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
  namespace: shbfc-uat
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
