install-opc413/app/ocp4/SHBFC-UAT/shbfc-uat-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shbfc-uat-deny-all
  namespace: shbfc-uat
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
